--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -12,8 +12,12 @@
 
         <%= actions_for_question question %>
       </p>
+
     </div>
 
   <% end %>
 
+  <%= will_paginate @questions %>
+
 </div>
+
